# stoscbot

./: .VERSION  .coverage  .coveragerc  .dockerignore  .env.sample  .gitignore  LICENSE  Procfile  Readme.md  codecov.yml  privacy_policy.txt  pyproject.toml  requirements-frozen.txt  requirements.txt  requirements_pro.txt  run_stoscbot.py  testy.md
.github/: dependabot.yml
.github/workflows/: codacy-analysis.yaml  codacy-analysis.yml  codecov.yml  codeql.yml  python-app.yml  telegram.yml
docker/: Dockerfile
docs/: AutoStart.md  ToDo.md
plugins/: badminton_make_image.py  badminton_util.py  handlers_area_prayer_groups.py  handlers_badminton.py  handlers_dev.py  handlers_finance.py  handlers_main.py  handlers_members.py  handlers_my_details.py  handlers_services.py  handlers_stmarys.py  handlers_streaming.py  test.py
stoscbots/ai/: answer_q.py
stoscbots/ai/chroma_db/: chroma-collections.parquet
stoscbots/bot/: bot.py  keyboards.py
stoscbots/db/: Readme.md  db.py
stoscbots/util/: badminton_util.py  badminton_util_1.py  bot_auth.py  loggers.py  utils.py
stoscbots/xero/: Readme.md  xero_utils.py
tests/: conftest.py  db_test.py  mocks.py
tests/plugins/: handlers_area_prayer_groups_test.py  handlers_dev_test.py  handlers_finance_test.py  handlers_main_test.py  handlers_members_test.py  handlers_my_details_test.py  handlers_services_test.py  handlers_stmarys_test.py
tests/stoscbots/bot/: test_keyboards.py
tests/stoscbots/db/: db_test.py
tests/stoscbots/util/: badminton_util_test.py  badminton_util_test_v2.py  bot_auth_test.py  utils_test.py
(+4 files in other folders)
