[project]
name = "stoscbot"
version = "7.3.0"
description = "Telegram Bot for the St. Thomas Orthodox Syrian Cathedral"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "boto3>=1.40.43",
    "convopyro>=0.5",
    "kurigram>=2.2.12",
    "mysql-connector-python>=9.4.0",
    "pendulum>=3.1.0",
    "pytgcrypto>=1.2.11",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
# Test and CI tooling dependencies
test = [
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "tabulate>=0.9.0"
]
